[package]
name = "bat_ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = {path = "../bevy", version = "0.9.0-dev", default-features = false, features = [
    "bevy_asset", "render", "bevy_winit",
]}
sark_grids = {path= "../sark_grids_rs", version = "0.5.5"}
bevy_ascii_terminal = {path="../bevy_ascii_terminal", version = "0.12.0"}
bitflags = "1.3.2"

[features]
dev = [
    "bevy/dynamic",
]